--- a/socialmedia.html
+++ b/socialmedia.html
@@ -76,7 +76,7 @@ body {
 <div class ="sidenav">
 <img src="nwc.jpg" style="width:140px;height:140px;">
 		<ul id="mainMenu">
-			<li><a href="northwestcreps.html">Home</a></li>
+			<li><a href="index.html">Home</a></li>
 			<li><a href="aboutsneakers.html">About Sneakers</a></li>
 			<li><a href="gallery.html">Gallery</a></li>
 			<li><a href="feedback.html">Feedback</a></li>
