--- a/index.html
+++ b/index.html
@@ -87,3 +87,5 @@ body {
 <img src="jordan4offwhite.png" alt=Off White Jordan 4s style="width:400px;height:400px;">
 
 <h4>Welcome to our website!</h4>
+	</body>
+</html>
